# hist2d

./: Cargo.toml  README.md  test.counts
src/: cli.yml  main.rs
