[package]
name = "hist2d"
version = "0.1.2"
authors = ["Jesse Wallace <jesse.wallace@anu.edu.au>"]
license = "MIT OR Apache-2.0"
description = "Generates a 2d histogram from paired count data."
readme = "README.md"
homepage = "https://github.com/J-Wall/hist2d"
repository = "https://github.com/J-Wall/hist2d"
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
